--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyWeb</title>
+  <title>Samuel Santiago</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/imagenes/_77509639-8f34-4843-891d-fe2676b0ba14.jpg">
 </head>
 <body>
   <app-root></app-root>
